--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "next": "12.0.4",
+    "pdfmake": "^0.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
