--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "next": "12.0.4",
+    "next": "^12.1.5",
     "pdfmake": "^0.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -18,7 +18,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "@types/axios": "^0.14.0",
+    "@types/pdfmake": "^0.1.21",
+    "@types/react": "^18.0.8",
+    "@types/yup": "^0.29.13",
+    "typescript": "^4.6.3"
   }
 }
