--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "babel-preset-next": "^1.4.0",
     "next": "^12.1.5",
     "pdfmake": "^0.2.4",
     "react": "17.0.2",
