--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "axios": "^0.25.0",
     "babel-preset-next": "^1.4.0",
     "next": "^12.1.5",
