--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdfmake": "^0.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flatpickr": "^3.10.13",
     "styled-components": "^5.3.3",
     "uuidv4": "^6.2.13",
     "yarn": "^1.22.19",
