--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flatpickr": "^3.10.13",
+    "react-select": "^5.7.4",
+    "react-switch": "^7.0.0",
     "styled-components": "^5.3.3",
     "uuidv4": "^6.2.13",
     "yarn": "^1.22.19",
