--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "axios": "^0.25.0",
     "babel-preset-next": "^1.4.0",
+    "lodash.isequal": "^4.5.0",
     "next": "^12.1.5",
     "pdfmake": "^0.2.4",
     "react": "17.0.2",
