--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "^12.1.5",
     "pdfmake": "^0.2.4",
     "react": "17.0.2",
+    "react-datepicker": "^4.17.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "17.0.2",
     "react-flatpickr": "^3.10.13",
     "react-select": "^5.7.4",
