--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@emailjs/browser": "^3.10.0",
     "axios": "^0.25.0",
     "babel-preset-next": "^1.4.0",
+    "date-fns": "^4.1.0",
     "lodash.isequal": "^4.5.0",
     "next": "^12.1.5",
     "pdfmake": "^0.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^5.4.0",
     "react-select": "^5.7.4",
     "react-switch": "^7.0.0",
     "styled-components": "^5.3.3",
